--- a/works_list.html
+++ b/works_list.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Works_okazaki yumiko_portfolio</title>
+    <title>works_list</title>
     <link rel="stylesheet" href="./css/works_list.css">
 </head>
 
@@ -68,10 +68,10 @@
     </section>
 
     <section class="works_container">
-        <div class="works_wrapper">
+        <div id="works_wrapper-01">
             <div class="gradation">
             </div>
-            <div class="works01">
+            <div class="works_content">
                 <img class="pc_img" src="./images/pc_works_hair design-100.png" alt="美容室LP">
                 <div class="works_service">
                     web site
@@ -80,7 +80,7 @@
                     美容室LP
                 </div>
             </div>
-            <div class="works02">
+            <div class="works_content">
                 <img class="pc-tablet-sp_img" src="./images/pc_works_design cafe-100.png" alt="デザインカフェHP">
                 <div class="works_service">
                     web site
@@ -95,10 +95,10 @@
             <img class="stone_img2" src="images/stone2(pc_works_list).png" alt="stone">
         </picture>
 
-        <div class="works_wrapper02">
+        <div id="works_wrapper-02">
             <div class="gradation">
             </div>
-            <div class="works03">
+            <div class="works_content">
                 <img class="banner_img" src="./images/pc_works_burger-100.png" alt="新商品 告知バナー">
                 <div class="works_service">
                     web banner
@@ -107,7 +107,7 @@
                     新商品 告知バナー
                 </div>
             </div>
-            <div class="works04">
+            <div class="works_content">
                 <img class="banner_img" src="./images/pc_works_mobile plan-100.png" alt="モバイルプラン 訴求バナー">
                 <div class="works_service">
                     web banner
@@ -117,10 +117,10 @@
                 </div>
             </div>
         </div>
-        <div class="works_wrapper">
+        <div id="works_wrapper-03">
             <div class="gradation">
             </div>
-            <div class="works05">
+            <div class="works_content">
                 <img class="pc-tablet-sp_img" src="./images/pc_works_workers-100.png" alt="コワーキングスペースLP">
                 <div class="works_service">
                     web site
@@ -129,7 +129,7 @@
                     コワーキングスペースLP
                 </div>
             </div>
-            <div class="works06">
+            <div class="works_content">
                 <img class="banner_img" src="./images/pc_works_trrrrip-100.png" alt="新規アプリケーション 紹介バナー">
                 <div class="works_service">
                     web banner
@@ -144,10 +144,10 @@
             <img class="stone_img1" src="images/stone1(pc_works_list).png" alt="stone">
         </picture>
 
-        <div class="works_wrapper02">
+        <div id="works_wrapper-04">
             <div class="gradation">
             </div>
-            <div class="works07">
+            <div class="works_content">
                 <img class="banner_img" src="./images/東京おすすめスポット.png" alt="Webメディアアイキャッチ">
                 <div class="works_service">
                     web banner
@@ -156,7 +156,7 @@
                     Webメディアアイキャッチ
                 </div>
             </div>
-            <div class="works08">
+            <div class="works_content">
                 <img class="banner_img" src="./images/works_サラダ.png" alt="Webメディアアイキャッチ">
                 <div class="works_service">
                     web banner
