--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- swiperのCDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -81,10 +82,10 @@
                         <img src="./images/instagram-100.png" alt="instagram">
                     </li>
                 </ul>
-                <div class="sp_btn">
-                    <span></span>
-                </div>
             </nav>
+            <div class="sp_btn">
+                <span></span>
+            </div>
         </div>
 
     </div>
@@ -132,7 +133,8 @@
         <section data-scroll-section class="scroll_section service">
             <div id="service_contents">
                 <picture class="service_img">
-                    <img class="pc_service_img" src="./images/pc_service-100.png" alt="service_photo">
+                    <source srcset="./images/sp_service-100.png" media="(max-width: 1100px)">
+                    <img src="./images/pc_service-100.png" alt="service_photo">
                 </picture>
                 <div class="service_gradation">
                 </div>
@@ -220,8 +222,10 @@
         <section data-scroll-section class="scroll_section works">
             <div id="works_contents">
                 <picture class="works_img">
+                    <source srcset="./images/sp_works-100.png" media="(max-width: 1100px)">
                     <img src="./images/pc_works-100.png" alt="works_photo">
                 </picture>
+
                 <div class="portfolio_menu">
                     <div class="menu_title">
                         works
@@ -445,19 +449,33 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
     <script>
         (() => {
             document.addEventListener('DOMContentLoaded', () => {
-                const scroll = new LocomotiveScroll({
-                    el: document.querySelector('[data-scroll-container]'),
-                    direction: 'horizontal',
-                    smooth: true,
-                    tablet: {
-                        direction: 'vertical',
-                        smooth: false,
-                    },
-                    smartphone: {
-                        direction: 'vertical',
-                        smooth: false,
-                    },
-                })
+                let scroll
+                function initScroll() {
+                    const direction = window.innerWidth <= 1024 ? 'vertical' : 'horizontal';
+                    scroll = new LocomotiveScroll({
+                        el: document.querySelector('[data-scroll-container]'),
+                        direction: direction,
+                        smooth: true,
+                        tablet: {
+                            direction: 'vertical',
+                            smooth: false,
+                        },
+                        smartphone: {
+                            direction: 'vertical',
+                            smooth: false,
+                        },
+                    })
+                }
+                initScroll()
+
+                window.addEventListener('resize', function () {
+                    if (scroll) {
+                        scroll.destroy();
+                    }
+                    document.querySelector('html').removeAttribute('data-scroll-direction')
+
+                    initScroll();
+                });
                 const links = document.querySelectorAll('.nav_list a')
                 links.forEach((link) => {
                     const href = link.getAttribute('href')
