--- a/works_content-05.html
+++ b/works_content-05.html
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div class="portfolio_top02">
+        <!-- <div class="portfolio_top02">
             <ul class="nav_list">
                 <li class="nav_list_text">
                     <a href="index.html#portfolio_top">
@@ -55,7 +55,7 @@
                     <img src="./images/instagram-100.png" alt="instagram">
                 </li>
             </ul>
-        </div>
+        </div> -->
     </header>
 
     <section class="works_title">
@@ -103,8 +103,12 @@
     </section>
 
     <section class="contact">
-        <p class="contact_text">
+        <p class="pc_contact_text">
             制作のご依頼やご相談、ご不明点がございましたらお気軽にお問い合わせください。<br>
+            通常3日以内に返信させていただきます。
+        </p>
+        <p class="sp_contact_text">
+            制作のご依頼やご相談、ご不明点がございましたら<br>お気軽にお問い合わせください。<br>
             通常3日以内に返信させていただきます。
         </p>
         <div class="contact_btn">
@@ -112,11 +116,18 @@
                 contact
             </a>
         </div>
-        <div class="contact-back_btn">
+
+        <div class="pc_contact-back_btn">
             <a href="works_list.html#works_wrapper-03">
                 back
             </a>
         </div>
+        <div class="sp_contact-back_btn">
+            <a href="works_list.html#sp_works_wrapper-05">
+                back
+            </a>
+        </div>
+
         <h2 class="copyright">
             <span class="mgr-20">©️ OKAZAKI YUMIKO</span>PORTFOLIO SITE
         </h2>
