--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
                         }
                     }
                 })
-                const links = document.querySelectorAll('.nav_list a')
+                const links = document.querySelectorAll('.pc_nav_list a')
                 links.forEach((link) => {
                     const href = link.getAttribute('href')
                     const target = document.querySelector(href)
