--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         <section data-scroll-section class="scroll_section top">
             <header id="portfolio_top">
                 <div class="portfolio_top01">
-                    <picture class="portfolio_tree">
-                        <img src="./images/pc_top_tree-100.png" alt="tree">
-                    </picture>
+                    <div class="portfolio_tree">
+                        <img class="tree_img" src="./images/pc_top_tree-100.png" alt="tree">
+                    </div>
                     <div class="portfolio_title">
                         <h1 class="portfolio_title01">
                             OKAZAKI YUMIKO
@@ -141,7 +141,7 @@
             <div id="service_contents">
                 <div class="service_img_box">
                     <picture class="service_img">
-                        <source srcset="./images/sp_service-100.png" media="(max-width: 767px)">
+                        <source srcset="./images/sp_service-100.png" media="(max-width: 1100px)">
                         <source srcset="./images/tablet_service-100.png" media="(max-width: 1100px)">
                         <img src="./images/pc_service-100.png" alt="service_photo">
                     </picture>
@@ -292,10 +292,12 @@
                         </div>
                     </div>
                 </div>
-                <picture class="about_img01">
-                    <source srcset="./images/sp_works.png" media="(max-width: 1100px)">
-                    <img src="./images/pc_about-100.png" alt="tree">
-                </picture>
+                <div class="about_img-1">
+                    <picture class="about_img01">
+                        <source srcset="./images/sp_works.png" media="(max-width: 1100px)">
+                        <img src="./images/pc_about-100.png" alt="tree">
+                    </picture>
+                </div>
                 <picture class="about_img02">
                     <img src="./images/pc_about02-100.png" alt="石">
                 </picture>
@@ -456,10 +458,12 @@
 
         <section data-scroll-section class="scroll_section bottom">
             <footer>
-                <picture class="footer_img">
-                    <source srcset="./images/pc_woks_bottom.png" media="(max-width: 1100px)">
-                    <img src="./images/pc_footer-100.png" alt="tree">
-                </picture>
+                <div class="footer_img">
+                    <picture class="footer_img-1">
+                        <source srcset="./images/pc_woks_bottom.png" media="(max-width: 1100px)">
+                        <img class="footer_img01" src="./images/pc_footer-100.png" alt="tree">
+                    </picture>
+                </div>
                 <div class="copyright">
                     <span class="mgr-20">©️ OKAZAKI YUMIKO</span>PORTFOLIO SITE
                 </div>
