--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                         </div>
                     </div>
                     <div class="portfolio_top02">
-                        <picture class="top_img">
-                            <img src="./images/pc_top-100.png" alt="top_photo">
-                        </picture>
+                        <div class="top_img">
+                            <img class="top_img-1" src="./images/pc_top-100.png" alt="top_photo">
+                        </div>
                         <div class="sp_portfolio_lead">
                             <div class="sp_portfolio_lead-ja">
                                 いろんな人の想いが、<br>調和したデザイン。
@@ -543,6 +543,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
         })()
 
     </script>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper(".swiper", {
