--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 </div>
                 <div class="top_scroll">
                     <span class="mgr-20">scroll</span>down
+                    <div class="scroll_line"></div>
                 </div>
 
             </header>
