--- a/thanks.html
+++ b/thanks.html
@@ -10,6 +10,26 @@
 
 <body>
 
+    <picture class="img01">
+        <img src="images/thanks_img.png" alt="img01">
+    </picture>
+
+    <div class="thanks_page">
+        <div class="thanks_title">
+            お問い合わせが完了しました
+        </div>
+
+        <div class="thanks_text">
+            お問い合わせいただきありがとうございます。<br>
+            3日以内にご連絡させていただきますので<br>
+            今しばらくお待ちくださいませ。
+        </div>
+    </div>
+
+    <picture class="img02">
+        <img src="images/thanks_img02.png" alt="img02">
+    </picture>
+
 </body>
 
 </html>
